Feat (auth): Complete Customer Authentication
